<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logcat_line"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="430dip"
    android:layout_weight="1"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/dropdown_menu"
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Button
        android:id="@+id/btnOpenConnection"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center"
        android:text="Open New Socket Connection" />

    <Button
        android:id="@+id/btnSendMessageToWebSocket"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"

        android:text="@string/send_message_to_websocket" />



    <Button
        android:id="@+id/btnStart"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center"
        android:text="Start Timer" />

    <Button
        android:id="@+id/btnStop"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center"
        android:text="Stopp Timer" />


    <Button
        android:id="@+id/btnDumpLogcat"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_toRightOf="@+id/btnSendImagesFromDisk"
        android:text="Dump Logcat" />

    <Button
        android:id="@+id/btnCloseConnection"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center"

        android:text="Close Socket Connection" />

    <Button
        android:id="@+id/btnRootShell"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal|center"
        android:text="Run Shell Commands" />

</LinearLayout>
</ScrollView>
